# cgspace-submission-guidelines

./: .gitignore  Pipfile  README.md  config.toml  package-lock.json  package.json  pyproject.toml  requirements.txt
assets/css/: style.min.css
assets/js/: bundle.min.js
docs/: index.html  index.xml  sitemap.xml
docs/categories/: index.xml
docs/cg-authorship-types/: cg-authorship-types.txt
docs/cg-contributor-affiliation/: cg-contributor-affiliation.txt
docs/cg-contributor-crp/: cg-contributor-crp.txt
docs/cg-contributor-initiative/: cg-contributor-initiative.txt
docs/cg-contributor-programAccelerator/: cg-contributor-programAccelerator.txt
docs/cg-coverage-country/: cg-coverage-country.txt
docs/cg-coverage-region/: cg-coverage-region.txt
docs/cg-creator-identifier/: cg-creator-identifier.txt
docs/cg-howpublished/: cg-howPublished.txt
docs/cg-identifier-ccafsprojectpii/: cg-identifier-ccafsprojectpii.txt
docs/cg-identifier-ciatproject/: cg-identifier-ciatproject.txt
docs/cg-identifier-iitatheme/: cg-identifier-iitatheme.txt
docs/cg-identifier-project/: cg-identifier-project.txt
docs/cg-identifier-publicationRank/: cg-identifier-publicationRank.txt
docs/cg-identifier-wletheme/: cg-identifier-wletheme.txt
docs/cg-isijournal/: cg-isijournal.txt
docs/cg-journal/: cg-journal.txt
docs/cg-reviewStatus/: cg-reviewStatus.txt
docs/cg-reviewstatus/: cg-reviewStatus.txt
docs/cg-river-basin/: cg-river-basin.txt
docs/cg-species-breed/: cg-species-breed.txt
docs/cg-subject-actionArea/: cg-subject-actionArea.txt
docs/cg-subject-alliancebiovciat/: cg-subject-alliancebiovciat.txt
docs/cg-subject-bioversity/: cg-subject-bioversity.txt
docs/cg-subject-ccafs/: cg-subject-ccafs.txt
docs/cg-subject-ciat/: cg-subject-ciat.txt
docs/cg-subject-cip/: cg-subject-cip.txt
docs/cg-subject-iita/: cg-subject-iita.txt
docs/cg-subject-impactArea/: cg-subject-impactArea.txt
docs/cg-subject-impactPlatform/: cg-subject-impactPlatform.txt
docs/dcterms-type/: dcterms-type.txt
layouts/: home.html
public/: index.xml
util/: parse-input-forms.py
(+134 files in other folders)
