[tool.poetry]
name = "cgspace-submission-guidelines"
version = "0.0.1"
description = "Generate CGSpace submission guidelines documentation website."
authors = ["Alan Orth <alan.orth@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
requests = "^2.31.0"
requests-cache = "^1.1.0"
pyuca = "^1.2"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
