[project]
name = "cgspace-submission-guidelines"
version = "0.0.1"
description = "Generate CGSpace submission guidelines documentation website."
authors = [
    { name = "Alan Orth", email = "git@mjanja.mozmail.com" }
]
license= { file = "LICENSE.txt" }

readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "colorama==0.4.*",
    "requests==2.32.*",
    "requests-cache==1.2.*",
    "pyuca==1.2"
]

[project.urls]
repository = "https://github.com/ilri/cgspace-submission-guidelines"
homepage = "https://github.com/ilri/cgspace-submission-guidelines"

[dependency-groups]
dev = [
    "black==25.1.*",
    "isort==6.0.*",
    "flake8==7.3.*"
]

[tool.isort]
profile = "black"
line_length=88
